# substrate

./: .coverage  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  OWNERSHIP.md  README.md  RESEARCH.md  ROADMAP.md  opencode.json  pyproject.toml
.github/: PROJECT_BOARD.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  substrate-ci.yml
.opencode/agents/: substrate-chief-architect.md  substrate-civilization-engineer.md  substrate-research-director.md
civilization/: RESEARCH.md
civilization/agent/: __init__.py  agent.py
civilization/simulation/: world.py
config/: __init__.py  defaults.yaml  settings.py
core/: ARCHITECTURE.md  __main__.py  manifest.py  replay.py  seed.py  snapshot.py
core/distributed/: __init__.py  coordinator.py  message_queue.py  protocol.py  shard.py  worker.py
core/distributed/backends/: __init__.py  in_process.py  redis_backend.py
core/events/: __init__.py  bus.py
core/logging/: __init__.py  structured_logger.py
core/persistence/: __init__.py  store.py
core/recovery/: __init__.py  system.py
core/registry/: __init__.py  agent_registry.py
core/runtime/: __init__.py  engine.py
core/scheduler/: __init__.py  tick_scheduler.py
core/telemetry/: __init__.py  pipeline.py
docs/: experiment-guide.md
economy/energy/: __init__.py  system.py
economy/resources/: __init__.py  system.py
economy/trade/: __init__.py  system.py
evolution/: __init__.py
evolution/behavioral/: __init__.py  tracker.py
evolution/lineage/: __init__.py  system.py
evolution/mutation/: __init__.py  system.py
evolution/reproduction/: __init__.py  system.py
evolution/strategy/: __init__.py  system.py
examples/: discovery_mission.py
memory/episodic/: __init__.py  store.py
memory/semantic/: __init__.py  store.py
orchestrator/: __init__.py
platform/: __init__.py
research/config/: default.yaml  full-scale.yaml  quick-test.yaml
research/core/: __init__.py  experiment.py  protocol.py  registry.py
research/curiosity_swarm/: __init__.py  roles.py  swarm.py
research/curiosity_swarm/experiments/: __init__.py  dark_matter.py  hubble_tension.py  protein_folding.py
research/curiosity_swarm/reports/: investigation_59e1ab3a49d5eb6d.json  investigation_a0e96de79976755e.json
research/discovery_swarm/: __init__.py  discovery_crew.py  mission.py  roles.py
research/discovery_swarm/agents/: adversarial_critic.py  base.py  hypothesis_forge.py  literature_scout.py  simulation_engineer.py  swarm_orchestrator.py  synthesis_architect.py  uncertainty_oracle.py
research/discovery_swarm/missions/: mission_321e1d479498f063.json  mission_ee4f282b7d514ab8.json
research/scripts/: __init__.py  explore.py
research/templates/: baseline.py  social.py
research/templates/configs/: baseline.yaml  resource_scarcity.yaml  social_dynamics.yaml  tool_evolution.yaml
social/alliances/: __init__.py  system.py
social/messaging/: __init__.py  system.py
social/reputation/: __init__.py  system.py
storage/migrations/: 001_initial.py  __init__.py  runner.py
storage/sqlite/: __init__.py  backend.py
tests/: __init__.py  conftest.py  test_behavioral.py  test_config.py  test_distributed.py  test_event_bus.py  test_events_init.py  test_logger.py  test_orchestrator.py  test_persistence.py  test_recovery.py  test_registry.py  test_runtime.py  test_scheduler.py  test_strategy.py  test_telemetry.py
tools/adoption/: __init__.py  system.py
tools/creation/: __init__.py  system.py
