[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "substrate"
version = "0.1.0"
description = "Tick-based async simulation runtime for persistent AI agent civilizations. Event bus, agent registry, SQLite persistence, crash recovery, telemetry, and structured logging — built for multi-day experiments on emergent social and economic behavior."
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "simulation",
    "agent-based-modeling",
    "ai-agents",
    "multi-agent",
    "civilization-simulation",
    "tick-based",
    "async-runtime",
    "event-bus",
    "crash-recovery",
    "emergent-behavior",
    "crewai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }
authors = [
    { name = "Substrate Contributors" },
]

[project.urls]
Homepage = "https://github.com/joaomdmoura/crewAI"
Documentation = "https://docs.crewai.com"
Repository = "https://github.com/joaomdmoura/crewAI"
Architecture = "https://github.com/joaomdmoura/crewAI/blob/main/ARCHITECTURE.md"
Roadmap = "https://github.com/joaomdmoura/crewAI/blob/main/ROADMAP.md"
Research = "https://github.com/joaomdmoura/crewAI/blob/main/RESEARCH.md"

dependencies = [
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0",
]

[tool.setuptools.packages.find]
include = ["core*", "storage*", "config*", "orchestrator*", "tests*", "civilization*", "memory*", "economy*", "evolution*", "social*", "tools*", "research*", "docs*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["core", "storage", "config", "orchestrator"]
omit = ["*/__pycache__/*", "*/tests/*", "*.pyc"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class \\w+\\b(Protocol|ABC)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "C4", "TCH"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_any_unimported = false
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
